# AshireOS

./: .gitattributes  .gitignore  Ashire.desktop  README.md  start-ade.sh
apps/ashire-image-viewer/: main.cpp  mainwindow.cpp  mainwindow.ui
apps/ashire-media-player/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
apps/ashire-text-editor/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/ashire-panel/: CMakeLists.txt  Main.qml  Panel.cpp  Panel.h  main.cpp
core/ashire-start-menu/: CMakeLists.txt  Main.qml  Resources.qrc  StartMenuButtons.cpp  ashire-start-menu.pro  main.cpp  mainwindow.h  mainwindow.ui  startmenu.cpp  startmenu.h
theming/color-schemes/: AshireDark.colors
